# proofreader

./: .env.example  .gitignore  README.md  pyproject.toml  spec.md
docs/: agent_steps.mmd  spec.md
src/blog_editor/: main.py
src/blog_editor/agent/: graph.py  state.py  suggestions.py  utils.py
src/blog_editor/agent/nodes/: coherence.py  structure.py  style.py  typos.py  updater.py
src/blog_editor/config/: prompts.yaml
src/blog_editor/db/: operations.py
src/blog_editor/ghost/: client.py  models.py
src/blog_editor/ui/: app.py
src/blog_editor/ui/screens/: draft_list.py  loading.py  review.py
src/blog_editor/ui/widgets/: diff.py  progress.py
src/proofreader/: main.py
src/proofreader/agent/: graph.py  state.py  utils.py
src/proofreader/agent/nodes/: coherence.py  structure.py  style.py  typos.py  updater.py
src/proofreader/config/: prompts.yaml  settings.py
src/proofreader/db/: models.py  operations.py
src/proofreader/ghost/: models.py
src/proofreader/ui/: app.py
src/proofreader/ui/screens/: draft_list.py  lexical_preview.py  result.py  review.py
tests/: conftest.py  test_core.py
