[project]
name = "blog-editor"
version = "0.1.0"
description = "AI-powered agent for reviewing and correcting Ghost blog drafts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.10",
    "textual>=0.40.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "pytest-mock>=3.15.1",
    "pyjwt>=2.10.1",
]

[project.scripts]
blog-editor = "blog_editor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "types-python-dateutil>=2.8.19",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
